[gd_scene load_steps=16 format=2]

[ext_resource path="res://testCaracters/Zero/Zero.png" type="Texture" id=1]
[ext_resource path="res://testCaracters/Zero/Zero.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.8054, 43.3871 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.854

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 66.7624, 36.3363 )

[sub_resource type="Animation" id=13]
resource_name = "AIRATTACK1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 51 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ATTACK1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "ATTACK2"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "ATTACK3"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 21, 22 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "SPECIAL1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 45 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "SPECIAL2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword_area/SWORD_HITBOX:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Zero" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.89075, 17.0167 )
shape = SubResource( 1 )

[node name="Sword_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="SWORD_HITBOX" type="CollisionShape2D" parent="Sword_area"]
position = Vector2( -70, 8 )
shape = SubResource( 2 )
disabled = true

[node name="TP" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="area" type="CollisionShape2D" parent="TP"]
position = Vector2( -100, 10 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 6
hframes = 9
frame = 2
region_rect = Rect2( -89.0523, 543.165, 18.5062, 101.784 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AIRATTACK1 = SubResource( 13 )
anims/ATTACK1 = SubResource( 4 )
anims/ATTACK2 = SubResource( 5 )
anims/ATTACK3 = SubResource( 6 )
anims/IDLE = SubResource( 7 )
anims/RUN = SubResource( 8 )
anims/SHOOT1 = SubResource( 9 )
anims/SHOOT2 = SubResource( 10 )
anims/SPECIAL1 = SubResource( 11 )
anims/SPECIAL2 = SubResource( 12 )

[node name="SHOOT_POSITION" type="Position2D" parent="."]
position = Vector2( -70, 8 )
[connection signal="body_entered" from="Sword_area" to="." method="_on_Sword_area_body_entered"]
[connection signal="body_entered" from="TP" to="." method="_on_TP_body_entered"]
[connection signal="body_exited" from="TP" to="." method="_on_TP_body_exited"]
